src/webparts/projectDashboard/ProjectDashbaord.overrides.scss
/*********** FONTS  **************/

@font-face {
	font-family: 'Conv_AVENIRLTSTD-BLACK';
	src: url('../fonts/AVENIRLTSTD-BLACK.eot');
	src: local('?'), url('../fonts/AVENIRLTSTD-BLACK.woff') format('woff'), url('../fonts/AVENIRLTSTD-BLACK.ttf') format('truetype'), url('../fonts/AVENIRLTSTD-BLACK.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'Conv_AVENIRLTSTD-BOOK';
	src: url('../fonts/AVENIRLTSTD-BOOK.eot');
	src: local('?'), url('../fonts/AVENIRLTSTD-BOOK.woff') format('woff'), url('../fonts/AVENIRLTSTD-BOOK.ttf') format('truetype'), url('../fonts/AVENIRLTSTD-BOOK.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'Conv_AVENIRLTSTD-HEAVY';
	src: url('../fonts/AVENIRLTSTD-HEAVY.eot');
	src: local('?'), url('../fonts/AVENIRLTSTD-HEAVY.woff') format('woff'), url('../fonts/AVENIRLTSTD-HEAVY.ttf') format('truetype'), url('../fonts/AVENIRLTSTD-HEAVY.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'Conv_AVENIRLTSTD-LIGHT';
	src: url('../fonts/AVENIRLTSTD-LIGHT.eot');
	src: local('?'), url('../fonts/AVENIRLTSTD-LIGHT.woff') format('woff'), url('../fonts/AVENIRLTSTD-LIGHT.ttf') format('truetype'), url('../fonts/AVENIRLTSTD-LIGHT.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
/*****************************************************************/

body, html{
  background-color: #f8f9fd;
  font-family: 'Conv_AVENIRLTSTD-BOOK';
  font-weight: normal;
	font-style: normal;
}

.ControlZone{
  background-color: #f8f9fd;
}
.TimeLineContainer {
  .gantt-container {
    position: relative;
    font-size: 12px;
    height: 24rem;
  }
  .gantt-container svg.gantt {
    max-height: 100%;
  }
  .gantt .grid-background {
    fill: none;
  }

  .gantt .grid-header {
    fill: #ffffff;
    stroke: #e0e0e0;
    stroke-width: 1.4;
  }

  .gantt .grid-row {
    fill: #ffffff;
  }

  .gantt .grid-row:nth-child(even) {
    fill: #f5f5f5;
  }

  .gantt .row-line {
    stroke: #ebeff2;
  }

  .gantt .tick {
    stroke: #e0e0e0;
    stroke-width: 0.2;
  }
  .gantt .tick.thick {
    stroke-width: 0.4;
  }

  .gantt .today-highlight {
    fill: #606692;
    opacity: 0.5;
  }

  .gantt .arrow {
    fill: none;
    stroke: #666;
    stroke-width: 1.4;
  }

  .gantt .bar {
    fill: #b8c2cc;
    stroke: #8d99a6;
    stroke-width: 0;
    transition: stroke-width 0.3s ease;
    user-select: none;
  }

  .gantt .bar-progress {
    fill: #a3a3ff;
  }

  .gantt .bar-invalid {
    fill: transparent;
    stroke: #8d99a6;
    stroke-width: 1;
    stroke-dasharray: 5;
  }
  .gantt .bar-invalid ~ .bar-label {
    fill: #555;
  }

  .gantt .bar-label {
    fill: #fff;
    dominant-baseline: central;
    text-anchor: middle;
    font-size: 12px;
    font-weight: lighter;
  }
  .gantt .bar-label.big {
    fill: #555;
    text-anchor: start;
  }

  .gantt .handle {
    fill: #ddd;
    cursor: ew-resize;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease;
  }

  .gantt .bar-wrapper {
    cursor: pointer;
    outline: none;
  }
  .gantt .bar-wrapper:hover .bar {
    fill: #a9b5c1;
  }
  .gantt .bar-wrapper:hover .bar-progress {
    fill: #8a8aff;
  }
  .gantt .bar-wrapper:hover .handle {
    visibility: visible;
    opacity: 1;
  }
  .gantt .bar-wrapper.active .bar {
    fill: #a9b5c1;
  }
  .gantt .bar-wrapper.active .bar-progress {
    fill: #8a8aff;
  }

  .gantt .lower-text,
  .gantt .upper-text {
    font-size: 12px;
    text-anchor: middle;
  }

  .gantt .upper-text {
    fill: #555;
  }

  .gantt .lower-text {
    fill: #333;
  }

  .gantt .hide {
    display: none;
  }

  .gantt-container .popup-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.8);
    padding: 0;
    color: #959da5;
    border-radius: 3px;
  }
  .gantt-container .popup-wrapper .title {
    border-bottom: 3px solid #a3a3ff;
    padding: 10px;
  }
  .gantt-container .popup-wrapper .subtitle {
    padding: 10px;
    color: #dfe2e5;
  }
  .gantt-container .popup-wrapper .pointer {
    position: absolute;
    height: 5px;
    margin: 0 0 0 -5px;
    border: 5px solid transparent;
    border-top-color: rgba(0, 0, 0, 0.8);
  }

  svg.gantt {
    pointer-events: none;
  }

  .timelineProjectName{
    margin-top: 13px;
    font-weight: 500;
    font-size: 13px;
    color: #fff;
    z-index: 999;
    padding: .5rem 0 0 1rem;
    overflow-y: scroll;
    height: 100%;
    background-color: #181a2d;
    }
    .timelineMainDiv{
      height:320px;
       overflow:auto;
    }

    .projectSideBar {
      display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    height: 250px;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    position: absolute;
    top: 5rem;
    bottom: 0;
    left: 0;
    padding-left: 0;
    }

    .timelineProjectNameDiv{
      color: aquamarine;
      margin-top: 30px;
      margin-left: 10px;
    }
    .timeLineBtnDiv {
      text-align: right;
      padding: 5px;
      background-color: #2d314c;
    }

    .timeLineBtn{
      background: 0 0;
    color: #ddd;
    border: 1px solid #373b5d;
    margin-left: 5px;
    border-radius: 42px;
    font-size: 12px;
    padding: 2px 12px;
    background-color: #202338;

    }
}

// Prashant Custom CSS
.TimeLineContainer {
  background-color: #1d203a;
  overflow-y: hidden;
  position: relative;
}

.TimeLineContainer .gantt .tick {
  stroke: #030306;
  stroke-width: .2;
}
.TimeLineContainer .gantt .grid-row {
  fill: #1d203a;
}
.TimeLineContainer .gantt .grid-row:nth-child(2n) {
  fill: #1d203a;
}
.TimeLineContainer .gantt .grid-header {
  fill: #1d203a;
  stroke: #181b36;
  stroke-width: 1.4;
  color: #fff;
}
.TimeLineContainer .gantt .row-line {
  stroke: #151529;
}
.TimeLineContainer .gantt .bar {
  fill: #238ef1;
  stroke: #238ef1;
  stroke-width: 0;
  transition: stroke-width .3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.TimeLineContainer .gantt .bar-progress {
  fill: #1773c7;
}
.TimeLineContainer .gantt .bar-wrapper.active .bar {
  fill: #238ef1;
}
.TimeLineContainer .gantt .bar-wrapper.active .bar-progress {
  fill: #1773c7;
}
.TimeLineContainer .gantt .today-highlight {
  fill: #606692;
  opacity: .5;
}
.TimeLineContainer .gantt-container .popup-wrapper .title {
  border-bottom: 3px solid #248ef1;
  padding: 10px;
}
.TimeLineContainer .gantt .upper-text {
  fill: #fff;
}
.TimeLineContainer .gantt .lower-text {
  fill: #fff;
}
.TimeLineContainer .gantt .bar-wrapper:hover .bar {
  fill: #1f7ed6;;
}
.TimeLineContainer .gantt .bar-wrapper:hover .bar-progress {
  fill: #155c9c;
}

div#workbenchPageContent {
  max-width: 10000px !important;
  padding-left: 400px !important;
  padding-right: 2px !important;
}
.TimeLineContainer .gantt .bar-label.big {
  fill: #fff;
  text-anchor: start;
}
.workbench{
  font-family: 'Conv_AVENIRLTSTD-BOOK' !important;
}

tr.ui-widget-content > td:first-child {
  padding: 0;
  background-color: #248ef1;
  color: #fff;
}

div[class^="feedback_"]{
  display: none !important;
}

.fa-file-pdf:before{
  color: #fa5959;
}
.fa-file-excel:before{
  color: #80ea78;
}
.fa-file-word:before{
  color: #faba6b;
}
.fa-file-archive:before{
  color: #acd9e4;
}
.fa-file-video:before{
  color: #cf84ef;
}
.fa-file-image:before{
  color: #80c2ff;
}
.btn-white{
  color: #000;
}

div[class="commandBarWrapper"]{
  display: none !important;
}

div[class^="pageTitle_"]{
  display: none !important;
}

.projectSideBar ::-webkit-scrollbar-thumb{
  background-color:transparent;
  outline: 0px;
  border: 0px;
  border-radius: 0;
}
.pi-fw{
  color: #fff;
  font-size: 1.5rem;
}
.ui-sortable-column-icon.pi-fw{
  color: #696d80;
  font-size: 12px;
}

.react-calendar-timeline .rct-item.item-weekend {
  background: #21F32C;
  border-color: #29B31A;
}
.react-calendar-timeline .rct-header .rct-label-group{
background: #2d314c;
border-bottom: 1px solid #151529;
border-left: 2px solid #151529;
}
.react-calendar-timeline .rct-horizontal-lines .rct-hl-even, .react-calendar-timeline .rct-horizontal-lines .rct-hl-odd{
  border-bottom: 1px solid #151529;
}
.react-calendar-timeline .rct-vertical-lines .rct-vl{
border-left: 1px solid #151529;
background:#1e213a;
}
.react-calendar-timeline .rct-header .rct-label{
border-left: 1px solid #151529;
color: #fff;
background: #1e213a;
border-bottom: 1px solid #151529;
}
.react-calendar-timeline .rct-vertical-lines .rct-vl.rct-day-6, .react-calendar-timeline .rct-vertical-lines .rct-vl.rct-day-0{
background:#252842;
}
.react-calendar-timeline .rct-outer{
background: #24273f;
}
.react-calendar-timeline .rct-today{
background: #838cce;
}
.react-calendar-timeline .rct-today::before {
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  left: -8px;
  width: .5rem;
  height: 100%;
  background: #838cce;
}
.react-calendar-timeline .rct-items .rct-item{
background: #238ef1;
border: 1px solid #238ef1;
border-radius:3rem;
-webkit-box-shadow: 0px 0px 104px -9px rgba(35,141,241,0.96);
-moz-box-shadow: 0px 0px 104px -9px rgba(35,141,241,0.96);
box-shadow: 0px 0px 104px -9px rgba(35,141,241,0.96);
text-align: center;
font-size: 11px;
}
.react-calendar-timeline .rct-sidebar{
border-right: 1px solid #151529;
}
.react-calendar-timeline .rct-sidebar-header{
background:#181a2d;
border: 0px;
text-align:center;
font-size:18px;
padding-top: 1rem;
color: #24def1;
}
.react-calendar-timeline .rct-sidebar .rct-sidebar-row{
border:0px !important;
color:#fff;
text-align:left;
font-size: 12px;
}
.react-calendar-timeline .rct-vertical-lines .rct-vl.rct-vl-first{
border-left: 2px solid #151529;
}
.react-calendar-timeline .rct-header .rct-label.rct-first-of-type{
border-left: 2px solid #151529;
}
.react-calendar-timeline .rct-header .bottom-header, .react-calendar-timeline .rct-header .top-header {
 background: #1e213a;
}
.react-calendar-timeline-div {
  height: 241px;
  overflow: auto;
  min-height: 241px;
}
.ui-dropdown-panel .ui-dropdown-list {
  background-color: #fff;
}
.react-calendar-timeline .rct-items .rct-item.selected {
  background: #FFC107;
  border: 1px solid #FF9800;
  z-index: 999;
  color:#2d2306;
}

div[name="Recycle bin"]{
  display: none !important;
}

div[class^="footerBar_"]{
  display: none !important;
}

